# CarlosFuessler

./: .gitignore  Cargo.toml  README.md  build.zig  index.html  style.css
.cargo/: config.toml
.github/workflows/: deploy.yml
.opencode/plans/: 2026-06-28-win95-os-cv-implementation.md
.superpowers/brainstorm/: .last-token
.superpowers/brainstorm/55599-1782679733/content/: approaches.html  waiting.html
.superpowers/brainstorm/55599-1782679733/state/: server-info  server-instance-id
content/: about.md  clippy.json  cv.md  filesystem.json
content/contact/: contact.md
content/projects/: project-1.md
content/skills/: skills.md
docs/superpowers/specs/: 2026-06-28-win95-os-cv-design.md
js/: main.js
rust-wasm/: Cargo.toml
rust-wasm/src/: app_state.rs  clippy.rs  contact.rs  desktop.rs  file_manager.rs  login.rs  main.rs  markdown.rs  projects_gallery.rs  taskbar.rs  terminal.rs  vfs.rs  window_manager.rs
rust-wasm/src/apps/: calculator.rs  calendar.rs  cdplayer.rs  minesweeper.rs  mod.rs  notepad.rs  paint.rs  snake.rs  sysinfo.rs
rust-wasm/templates/: app.html
serve/src/: main.rs
